<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:id="@+id/card_view"
    android:layout_marginHorizontal="2dp"
    android:layout_marginBottom="4dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/id_image_in_cart"
            android:layout_width="@dimen/order_card_image"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:padding="2dp"
            android:contentDescription="@string/image_description_product_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/arasaka_logo" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45"/>

        <TextView
            android:id="@+id/product_name"
            style="@style/TextOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:paddingHorizontal="@dimen/card_text_padding_horizontal"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_main"
            app:layout_constraintStart_toEndOf="@+id/id_image_in_cart"
            tools:text="Card title"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/card_text_padding_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/id_image_in_cart"
            app:layout_constraintTop_toTopOf="@+id/guideline_main">

            <ImageButton
                android:id="@+id/action_decrease_count"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_button_remove_red"
                android:gravity="center"
                android:contentDescription="@string/action_decrease_count"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_items_count"
                style="@style/TextCard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="4dp"
                android:gravity="center"
                android:textColor="@color/colorDarkBackground"
                android:textSize="18sp"
                tools:text="1"/>

            <ImageButton
                android:id="@+id/action_increase_count"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:background="@color/colorArasakaBackground"
                android:gravity="center"
                android:paddingHorizontal="4dp"
                android:src="@drawable/ic_button_add_red"
                android:contentDescription="@string/action_increase_count"
                android:visibility="visible" />

            <TextView
                android:id="@+id/label_multiplication"
                style="@style/TextOrderCard"
                android:paddingHorizontal="4dp"
                android:text="@string/sign_multiplication" />

            <TextView
                android:id="@+id/tv_price_card"
                style="@style/TextOrderCard"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                tools:text="7500"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/label_equals"
                style="@style/TextOrderCard"
                android:paddingHorizontal="4dp"
                android:text="@string/sign_equality"/>

            <TextView
                android:id="@+id/tv_price_card_total"
                style="@style/TextOrderCard"
                tools:text="7500" />

            <TextView
                android:id="@+id/label_currency"
                style="@style/TextOrderCard"
                android:text="@string/currency_2077" />

            <View
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/ll_action_delete_from_cart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/action_delete_from_cart"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="4dp"
                    android:background="@color/colorArasakaBackground"
                    android:gravity="center"
                    android:scaleType="center"
                    android:src="@drawable/ic_remove_from_order"
                    android:contentDescription="@string/action_remove_from_cart"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>